# FastAPI_Boiler_Plate_Template

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
app/: main.py
backend/: .env.example  Dockerfile  celery_worker.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/celery/: __init__.py  celery_app.py  celery_config.py
backend/app/core/celery/tasks/: email_tasks.py
backend/app/core/middleware/: security_layer.py
backend/app/core/security/OAuth2/: oauth2.py
backend/app/modules/Auth/models/: model.py
backend/app/modules/Auth/repository/: otp_repository.py
backend/app/modules/Auth/router/: oauth2.py  verification.py
backend/app/modules/Auth/services/: oauth2_service.py
backend/app/modules/Organizations/repository/: organization_repository.py
backend/app/modules/Organizations/router/: organization.py
backend/app/modules/Organizations/schema/: schema.py
backend/app/modules/Organizations/services/: organization_service.py
backend/app/modules/Users/models/: model.py
backend/app/modules/Users/repository/: user_repository.py
backend/app/modules/Users/schema/: schema.py
backend/app/modules/jobs/: __init__.py
backend/app/modules/jobs/schema/: schema.py
backend/docs/: API_DOCS_AUTH_ORGS.md  API_DOCS_USERS_JOBS.md
backend/migrations/versions/: 61965976d575_create_users_table.py  792e3a650032_add_task_controls_table_for_pause_resume.py  7bfae6f3846d_baseline.py  88e19050a4e7_remove_unique_constraint_on_oauth_id.py  a7048a8e06ad_add_last_login_to_users.py  c397bd2c99c3_initial_migration.py  d230fdf7b8fb_add_invite_token_to_organizations.py  f3f2b5a2f38b_add_organizations_and_multi_tenant_.py
backend/shared/utils/: email_utils.py  redis_cleanup.py  utils.py
backend/templates/emails/: welcome.html
backend/tests/: conftest.py
backend/tests/E2E/: test_job_control.py
backend/tests/Unit/: test_email_utils.py  test_jwt_handler.py
frontend/: Dockerfile  (+4 more)
(+65 files in other folders)
